@@ -1,4 +1,4 @@
-EXTRA_DIST  = resources
+EXTRA_DIST  = resources lipo
 EXTRA_DIST += distribution.xml.in im.bernat.lldpd.plist.in scripts/postinstall.in scripts/preinstall.in
 TEMPLATES   = distribution.xml    im.bernat.lldpd.plist    scripts/postinstall    scripts/preinstall
 
@@ -14,6 +14,7 @@ requirements:
 PKG_NAME=@PACKAGE@-@VERSION@.pkg
 PKG_TITLE=@PACKAGE@ @VERSION@
 PKG_DIR=@PACKAGE@-@VERSION@
+ARCHS=@host_cpu@
 
 # Main target is `pkg`
 pkg: requirements ../$(PKG_NAME)
@@ -42,8 +43,20 @@ pkg.1/$(PKG_NAME): $(PKG_DIR) scripts/postinstall scripts/preinstall
 		$@
 
 $(PKG_DIR): stamp-$(PKG_DIR)
-stamp-$(PKG_DIR): im.bernat.lldpd.plist
-	$(MAKE) -C .. install DESTDIR=$(abs_builddir)/$(PKG_DIR)
+stamp-$(PKG_DIR): $(ARCHS:%=%/$(PKG_DIR))
+	$(srcdir)/lipo $(PKG_DIR) $^
+	touch $@
+
+pkg_curarch = $(@:stamp-%=%)
+$(ARCHS:%=%/$(PKG_DIR)): %/$(PKG_DIR): stamp-%
+$(ARCHS:%=stamp-%): stamp-%: im.bernat.lldpd.plist
+	[ -d $(pkg_curarch) ] || mkdir -p $(pkg_curarch)
+	(cd $(pkg_curarch) && \
+		$(abs_top_srcdir)/configure @CONFIGURE_ARGS@ \
+			CC="@CC@ -arch $(pkg_curarch)" \
+			CPP="@CPP@")
+	(cd $(pkg_curarch) && \
+		$(MAKE) install DESTDIR=$(abs_builddir)/$(pkg_curarch)/$(PKG_DIR))
 	touch $@
 
 # Install launchd plist
